<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jboss.integration-platform</groupId>
    <artifactId>jboss-integration-platform-parent</artifactId>
    <version>6.0.0.CR6</version>
  </parent>

  <groupId>org.overlord.dtgov</groupId>
  <artifactId>dtgov</artifactId>
  <version>1.2.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Design Time Governance</name>
  <description>DTGov is a Governance Application build on top of a SOA Repository</description>
  <url>http://www.jboss.org/overlord</url>
  <inceptionYear>2013</inceptionYear>

  <organization>
    <name>JBoss, a division of Red Hat</name>
    <url>http://www.jboss.org</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>jira</system>
    <url>https://issues.jboss.org/browse/DTGOV</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:Governance/dtgov.git</connection>
    <developerConnection>scm:git:git@github.com:Governance/dtgov.git</developerConnection>
    <url>scm:git:git@github.com:Governance/dtgov.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>Kurt Stam</name>
      <id>kstam</id>
      <email>kstam@jboss.com</email>
      <organization>JBoss, a division of Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Eric Wittmann</name>
      <id>ewittman</id>
      <email>eric.wittmann@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <!-- Instruct the build to use only UTF-8 encoding for source code -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>

    <!-- Distribution URLs -->
    <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
    <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>

    <!-- Maven plugin versions -->
    <maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
    <maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
    <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
    <maven.war.plugin.version>2.1.1</maven.war.plugin.version>
    <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
    <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
    <maven.clean.plugin.version>2.4.1</maven.clean.plugin.version>
    <maven.exec.plugin.version>1.2.1</maven.exec.plugin.version>
    <maven.antrun.plugin.version>1.7</maven.antrun.plugin.version>
    <maven.plexus-component-metadata.plugin.version>1.5.5</maven.plexus-component-metadata.plugin.version>

    <!-- DTGov Documentation -->
    <dtgov-wiki.version>1.2.0.Final</dtgov-wiki.version>

    <!-- S-RAMP version -->
    <s-ramp.version>0.4.0.Final</s-ramp.version>
    <s-ramp-ui.version>0.4.0.Final</s-ramp-ui.version>

    <!-- Overlord Commons version -->
    <overlord-commons.version>2.0.1-SNAPSHOT</overlord-commons.version>

    <!-- jBPM/Drools version -->
    <jbpm.version>6.0.0.Final</jbpm.version>
    <drools.version>6.0.0.Final</drools.version>

    <!-- DTGov only libraries (not in BOM) -->
    <commons.lang3.version>3.1</commons.lang3.version>
    <commons.compress.version>1.4.1</commons.compress.version>
    <commons.logging.version>1.1.1</commons.logging.version>
    <jboss-ejb3-api.version>3.1.0</jboss-ejb3-api.version>
    <log4j.version>1.2.16</log4j.version>
    <slf4j-log4j.version>1.5.11</slf4j-log4j.version>
    <slf4j-nop.version>1.5.11</slf4j-nop.version>
    <restassured.version>1.7.2</restassured.version>
    <jboss-as-cli.version>7.2.0.Final</jboss-as-cli.version>
    <dumbster.version>1.5</dumbster.version>
    <jboss-jacc-api_1.4_spec.version>1.0.2.Final</jboss-jacc-api_1.4_spec.version>
    <guava-gwt.version>14.0.1</guava-gwt.version>
    <commons.logging.version>1.1.1</commons.logging.version>
    <tomcat.version>7.0.52</tomcat.version>

    <!-- BOM Overrides -->
    <version.joda-time>2.1</version.joda-time>
    <version.org.apache.lucene>4.0.0</version.org.apache.lucene>
    
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven.source.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven.war.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven.clean.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${maven.exec.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>${maven.antrun.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.plexus</groupId>
          <artifactId>plexus-component-metadata</artifactId>
          <version>${maven.plexus-component-metadata.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>${maven.bundle.plugin.version}</version>
          <extensions>true</extensions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <versionRange>[2.3.0,)</versionRange>
                    <goals>
                      <goal>resources</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Specify the compiler options and settings -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <!-- Produce source jars during the 'verify' phase -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
          </includes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <argLine>-Xmx368m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
      <!-- Build a test-jar for each project, so that src/test/* resources and classes can be used in other projects. 
        Also customize how the jar files are assembled. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.plugin.version}</version><!--$NO-MVN-MAN-VER$ -->
        <executions>
          <execution>
            <id>test-jar</id>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-URL>${project.url}</Implementation-URL>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <!-- Override Lucene from BOM -->
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-core</artifactId>
        <version>${version.org.apache.lucene}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-queryparser</artifactId>
        <version>${version.org.apache.lucene}</version>
      </dependency>
    
      <!-- Integration Platform Imports -->
      <dependency>
        <groupId>org.jboss.integration-platform</groupId>
        <artifactId>jboss-integration-platform-bom</artifactId>
        <version>6.0.0.CR6</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      
      <!-- Overlord Commons -->
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-services</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-auth</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-auth-tomcat7</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-auth-jboss7</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-uiheader</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-gwt</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-config</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>

      <!-- Apache Commons -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons.lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>${commons.compress.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>${commons.logging.version}</version>
      </dependency>
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <!-- Third party libraries -->
      <dependency>
        <groupId>org.jboss.as</groupId>
        <artifactId>jboss-as-cli</artifactId>
        <version>${jboss-as-cli.version}</version>
      </dependency>
      <dependency>
        <groupId>com.jayway.restassured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>${restassured.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-core</artifactId>
        <version>${tika-core.version}</version>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>${version.joda-time}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava-gwt</artifactId>
        <version>${guava-gwt.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.ejb3</groupId>
        <artifactId>jboss-ejb3-api</artifactId>
        <version>${jboss-ejb3-api.version}</version>
      </dependency>
      <dependency>
        <groupId>dumbster</groupId>
        <artifactId>dumbster</artifactId>
        <version>${dumbster.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.spec.javax.security.jacc</groupId>
        <artifactId>jboss-jacc-api_1.4_spec</artifactId>
        <version>${jboss-jacc-api_1.4_spec.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven.surefire.report.plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>jboss-releases-repository</id>
      <name>JBoss Releases Repository</name>
      <url>${jboss.releases.repo.url}</url>
    </repository>
    <snapshotRepository>
      <id>jboss-snapshots-repository</id>
      <name>JBoss Snapshots Repository</name>
      <url>${jboss.snapshots.repo.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <!-- modules in alphabetical order -->
  <modules>
    <module>dtgov-common</module>
    <module>dtgov-task-api</module>
    <module>dtgov-task-client</module>
    <module>dtgov-war</module>
    <module>dtgov-war-eap61</module>
    <module>dtgov-war-eap61-modules</module>
    <module>dtgov-war-tomcat7</module>
    <module>dtgov-ui-war</module>
    <module>dtgov-ui-war-eap61</module>
    <module>dtgov-ui-war-tomcat7</module>
    <module>dtgov-workflows</module>
    <module>dtgov-demos</module>
    <module>dtgov-installer</module>
    <module>dtgov-distro</module>
  </modules>
</project>

